[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-firewall"
version = "0.1.0"
description = "A runtime guardrail proxy for LLM APIs — screens inbound prompts and scores outbound responses, blocking or flagging per policy."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Girisankar G", email = "girisankargopakumar@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
dev = ["pytest>=7.0", "ruff>=0.4", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
llmfw = "llm_firewall.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
